<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_ControlE_TE1_HMI" Id="{ca921e40-f1de-417b-a756-80e1b0ddd608}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ControlE_TE1_HMI EXTENDS FB_BaseControlElement_HMI IMPLEMENTS ITF_ControlE_TE1_HMI
VAR
	itfControlE_TE1Connector		: ITF_ControlE_TE1_HMI_Connector;
	refstControlE_TE1Data			: REFERENCE TO ST_ControlE_TE1_HMI;

	itfC1				: ITF_Component_TE1_HMI;
	itfC2				: ITF_Component_TE1_HMI;
	itfC3				: ITF_Component_TE1_HMI;
	itfC4				: ITF_Component_TE1_HMI;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="ITF_NazwaPB_HMI" Id="{fc02c5a7-2d4e-4146-a5fc-efb44536bf0f}" />
    <Method Name="FB_init" Id="{1412f87a-662f-4cdc-a852-d25956482f15}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	itfBaseLoggerConnector				: ITF_BaseLogger_HMI_Connector;	//bezpośredni łącznik do logera
	itfControlE_TE1Connector			: ITF_ControlE_TE1_HMI_Connector;
	itfC1								: ITF_Component_TE1_HMI;
	itfC2								: ITF_Component_TE1_HMI;
	itfC3								: ITF_Component_TE1_HMI;
	itfC4								: ITF_Component_TE1_HMI;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Przypisanie do elementu który własnie stworzyliśmy
THIS^.itfControlE_TE1Connector := itfControlE_TE1Connector;
//Przypisanie do elementów z biblioteki
THIS^.itfBaseLoggerElementConnector := itfControlE_TE1Connector;
THIS^.itfBaseComponentConnector := itfControlE_TE1Connector;
THIS^.itfBaseControlElementConnector := itfControlE_TE1Connector;

THIS^.AddComponent (itfComponentHMI := itfC1);
THIS^.itfC1 := itfC1;
THIS^.AddComponent (itfComponentHMI := itfC2);
THIS^.itfC2 := itfC2;
THIS^.AddComponent (itfComponentHMI := itfC3);
THIS^.itfC3 := itfC3;
THIS^.AddComponent (itfComponentHMI := itfC4);
THIS^.itfC4 := itfC4;


//
THIS^.itfBaseLoggerConnector			:= itfBaseLoggerConnector;

IF (THIS^.itfControlE_TE1Connector <> 0 AND
	THIS^.itfBaseLoggerElementConnector <> 0 AND
	THIS^.itfBaseComponentConnector	<> 0 AND
	THIS^.itfBaseControlElementConnector <> 0 AND
	THIS^.itfBaseLoggerConnector <> 0) THEN
	THIS^.bIsInit						:= TRUE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="LinkControlEData" Id="{40a9225c-c860-42c0-80e1-55921d22cad5}" FolderPath="ITF_NazwaPB_HMI\">
      <Declaration><![CDATA[METHOD LinkControlEData : BOOL
VAR_INPUT
	stData				: REFERENCE TO ST_ControlE_TE1_HMI_Link;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.refstControlE_TE1Data REF= stData.stControlE_TE1;

THIS^.refstBaseLoggerElementDataHMI REF= stData.stBaseLoggerElement;
THIS^.refstBaseComponentDataHMI REF= stData.stBaseComponent;
THIS^.refstBaseControlElementDataHMI REF= stData.stBaseControlElement;

THIS^.itfC1.LinkComponentData (stData := stData.stComponetE1_TE1);
THIS^.itfC2.LinkComponentData (stData := stData.stComponetE2_TE1);
THIS^.itfC3.LinkComponentData (stData := stData.stComponetE3_TE1);
THIS^.itfC4.LinkComponentData (stData := stData.stComponetE4_TE1);


THIS^.CreateLinkToEventsMemory ();

IF (__ISVALIDREF (THIS^.refstControlE_TE1Data) AND THIS^.IsLinkedReferences ()) THEN
	THIS^.bIsValidData		:= TRUE;
	LinkControlEData		:= TRUE;
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>